# physimRigid

./: CMakeLists.txt
app/: CMakeLists.txt
app/src/: main.cpp
cmake/: bgfx.cmake
engine/: CMakeLists.txt
engine/Input/: input.cpp  input.hpp
engine/components/: components.hpp  physics_components.hpp  render_components.hpp  transform.hpp
engine/core/: core.cpp  core.hpp
engine/ecs/: ecs.cpp  ecs.hpp
engine/imgui/: debugUI.cpp  debugUI.hpp  imgui_impl_bgfx.cpp  imgui_impl_bgfx.hpp
engine/logger/: logger.cpp  logger.hpp
engine/physics/: broadphase.hpp  collisionEvents.hpp  contact.hpp  inertia.hpp  narrowphase.hpp  physicsSystem.hpp  physicsWorld.cpp  pointerState.hpp
engine/physics/systems/: collisionDetection.hpp  constraintSolver.hpp  gravitySystem.hpp  inertiaSystem.hpp  mouseGrab.hpp
engine/physicsEngine/: physics.hpp
engine/renderer/: cameraState.hpp  renderSystem.cpp  renderSystem.hpp  shader.cpp  shader.hpp  window.cpp  window.hpp
engine/scripting/: scriptEngine.cpp  scriptEngine.hpp
engine/shaders/: basic.frag  basic.vert  fs_grid.sc  fs_imgui.sc  grid.frag  grid.vert  varying.def.sc  varying_imgui.def.sc  vs_basic.sc  vs_grid.sc  vs_imgui.sc
engine/timer/: timer.hpp
scripts/: init.lua
